# MLOPS-Project

./: README.md  main.py  pyproject.toml  setup.cfg  setup.py  template.py  test.py  tox.ini
.github/workflows/: ci-cd.yaml  ci.yaml  publish.yml  python-publish.yaml
tests/unit/: unit.py
